# my-atracbot

devel/: .catkin
devel/lib/beginner_tutorials/: img_stream_publisher  img_stream_subscriber
devel/lib/pkgconfig/: beginner_tutorials.pc  my_roscpp_library.pc  vision.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/my_roscpp_library/cmake/: my_roscpp_libraryConfig.cmake
devel/share/vision/cmake/: visionConfig.cmake
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: open_camera.cpp
src/my_roscpp_library/: CMakeLists.txt
src/my_roscpp_library/include/my_roscpp_library/: my_glcm.h  my_hog.h  my_stereofunction.h  my_stereograb.h  my_super_roscpp_library.h
src/my_roscpp_library/src/: my_glcm.cpp  my_hog.cpp  my_stereofunction.cpp  my_stereograb.cpp  my_super_roscpp_library.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: camera_calibration.cpp  detection.cpp  target_detection.cpp  trash_detection (copy).cpp  trash_detection.cpp  video_cam.cpp  waste.xml
